Fix: mobile size not showing keyboard and themes going above

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,8 @@
+header {
+  position: relative;
+  z-index: 1000;
+}
+
 .container {
   display: flex;
   flex-direction: column;
